--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
+    "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0",
     "gulp-uglify-es": "^2.0.0"
-  }
+  },
+  "dependencies": {}
 }
